<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
  >

    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_add_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/read"
        android:orderInCategory="100"
        android:title="@string/read"
        app:showAsAction="never" />
    <item
        android:id="@+id/noread"
        android:orderInCategory="100"
        android:title="@string/noread"
        app:showAsAction="never" />
    <item
        android:id="@+id/delread"
        android:orderInCategory="100"
        android:title="@string/delread"
        app:showAsAction="never" />
    <item
        android:id="@+id/settchan"
        android:orderInCategory="100"
        android:title="@string/settchan"
        app:showAsAction="never" />
    <item
        android:id="@+id/delchan"
        android:orderInCategory="100"
        android:title="@string/delchan"
        app:showAsAction="never" />
</menu>